# songphung-pos

./: BLUE_PRINT.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-windows-installer.yml
scripts/: sync-version.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  songphung.db-shm  songphung.db-wal  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_qr_thanh_toan.sql
src-tauri/src/: bill_qr.rs  csv_import.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/printer/: escpos_qr.rs  mod.rs  receipt_format.rs  windows_raw_print.ps1  windows_unicode_print.ps1
src/components/: AppHeader.tsx
src/components/billing/: BillTemplatePreview.tsx  ConfirmBillActionModal.tsx
src/components/ui/: button.tsx  checkbox.tsx  date-picker.tsx  select.tsx  sonner.tsx
src/features/categories/: CategoriesAdminPage.tsx
src/features/history/: HistoryPage.tsx
src/features/pos/: PosPage.tsx
src/features/products/: ProductsAdminPage.tsx
src/features/rooms/: RoomsAdminPage.tsx
src/features/settings/: PrinterSettingsPage.tsx
src/hooks/: useKaraoke.ts
src/store/: usePosStore.ts
src/styles/: colorSystem.ts
src/types/: karaoke.ts
src/utils/: formatDateTime.ts  invokeError.ts
